--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,12 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+# FOR STRIPE
+development:
+  stripe_publishable_key: pk_test_PkGxcyzfW8K2danqRJ75JSCG
+  stripe_secret_key: C9uRCma1dxeTt00bzWClvYzB
+
+production:
+  stripe_publishable_key: ENV['stripe_publishable_key']
+  stripe_secret_key: ENV['stripe_publishable_key']
