--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,6 +24,6 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  stripe_publishable_key: ENV['stripe_publishable_key']
-  stripe_secret_key: ENV['stripe_publishable_key']
+  stripe_publishable_key: <%= ENV['STRIPE_PUBLISHABLE_KEY'] %>
+  stripe_secret_key: <%= ENV['STRIPE_SECRET_KEY'] %>
   
